--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=user01
 spring.datasource.password=p@ssw0rd
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
