added logic part SendCurrentMailCommand    - added MailSenderService and impl him    - added dependence from pom    - change and added methods ModifyDataBaseServiceImpl    - added impl method sending message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+#telegram
 bot.name=mails_sender_bot
 bot.token=5907451802:AAHB1jdbp_FKWra0zA9z5KVb9aA_QaDWBt4
-
+# database
 spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/mailsenderDB
 spring.datasource.username=user01
 spring.datasource.password=p@ssw0rd
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
