--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #telegram
 bot.name=mails_sender_bot
 bot.token=5907451802:AAHB1jdbp_FKWra0zA9z5KVb9aA_QaDWBt4
+service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
 # database
 spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/mailsenderDB
 spring.datasource.username=user01
