added CryptoTool for key, some refactored    - added CryptoTool and methods encrypt and decrypt    - added utils method checkedRegistrationCommand for refactored    - impl working methods (en/de)crypt    - added catch AuthenticationFailedException from SendCurrentMailCommand    - added validate mail utils method for AfterChangeMailCommand    - fixed bug from ModifyDataBaseServiceImpl->public MailingHistoryDto getMailingHistoryById(Long id)    - and some refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 base.mail=
 base.key=
+
+#for Crypto
+cipher.initVector=
+cipher.key=
