some refactored   - added lazy loading MailingHistory   - added names for foreign keys   - fixed displaying MessageSentRecord   - and other changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 #telegram
-bot.name=mails_sender_bot
-bot.token=5907451802:AAHB1jdbp_FKWra0zA9z5KVb9aA_QaDWBt4
-service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
-service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
+bot.name=
+bot.token=
+service.file_info.uri=
+service.file_storage.uri=
 # database
-spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/mailsenderDB
-spring.datasource.username=user01
-spring.datasource.password=p@ssw0rd
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 base.mail=
 base.key=
-
 #for Crypto
 cipher.initVector=
 cipher.key=
+#hibernate
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
