--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-base.mail=
-base.key=
+base.mails=
+base.keys=
 #for Crypto
 cipher.initVector=
 cipher.key=
 #hibernate
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=
