fix transaction lazy work with MessageSentRecord and MailingHistory   - impl method bindByAccountId from MailingHistoryDao;   - change logic work of method getMailingHistoryById(long id) from MailingHistoryDao;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #telegram
 bot.name=
 bot.token=
-service.file_info.uri=
-service.file_storage.uri=
+service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
 # database
 spring.datasource.url=
 spring.datasource.username=
@@ -15,5 +15,3 @@ base.keys=
 #for Crypto
 cipher.initVector=
 cipher.key=
-#hibernate
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=
