--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,19 +1,20 @@
-plugins {
-    id 'java'
-}
-
-group 'org.gnori'
-version 'unspecified'
-
-repositories {
-    mavenCentral()
-}
-
+/**
+ * Submodules import sample
+ */
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    provided project(':data')
+    provided project(':store')
+}
+/**
+ * Spring
+ */
+dependencies {
+    provided group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 }
 
-test {
-    useJUnitPlatform()
+/**
+ * commons-io
+ */
+dependencies {
+    provided group: 'commons-codec', name: 'commons-codec'
 }
