--- a/send-mail-worker/build.gradle
+++ b/send-mail-worker/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
     implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: '6.1.0'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
