--- a/send-mail-worker/src/main/resources/application.yaml
+++ b/send-mail-worker/src/main/resources/application.yaml
@@ -28,8 +28,8 @@ spring:
     queue-name: send.mail
 #  for send-worker
 base:
-  mails: stepankonasenko@gmail.com
-  keys: pkjjmwzhblochwaz
+  mails: 
+  keys: 
 #for Crypto
 cipher:
   initVector: F-JaNdRgUjXn2r5u
