--- a/send-mail-worker/src/main/resources/application.yaml
+++ b/send-mail-worker/src/main/resources/application.yaml
@@ -15,10 +15,8 @@ spring:
     username: postgres
     password: martin12
   jpa:
-    generate-ddl: true
+    generate-ddl: false
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
 #  rabbitMQ
   rabbitmq:
     addresses: localhost
