--- a/client-telegram/src/main/resources/application.yaml
+++ b/client-telegram/src/main/resources/application.yaml
@@ -13,9 +13,9 @@ service:
   # database
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mailsenderdb
-    username: postgres
-    password: martin12
+    url: jdbc:postgresql://localhost:5432/
+    username:
+    password:
   jpa:
     generate-ddl: true
     show-sql: true
@@ -24,8 +24,6 @@ spring:
 
 # rabbitMQ
   rabbitmq:
-    addresses: localhost
-    port: 15672
     username: guest
     password: guest
     queue-name: send.mail
