--- a/send-mail-worker/src/main/resources/application.yaml
+++ b/send-mail-worker/src/main/resources/application.yaml
@@ -11,16 +11,15 @@ service:
 # database
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mailsenderdb
-    username: postgres
-    password: martin12
+    url: jdbc:postgresql://localhost:5432/
+    username:
+    password:
   jpa:
     generate-ddl: false
     show-sql: true
 #  rabbitMQ
   rabbitmq:
-    addresses: localhost
-    port: 15672
+    addresses: localhost:5672
     username: guest
     password: guest
     queue-name: send.mail
