#1 #refactor #send-mail-worker - DefaultEmailData

--- a/send-mail-worker/src/main/resources/application.yaml
+++ b/send-mail-worker/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ spring:
     password: guest
     queue-name: send.mail
 #  for send-worker
-base:
+base-mails-data:
   mails:
   keys:
 #for Crypto
